--- a/src/app/pages/about/ngsw-settings/ngsw-settings.html
+++ b/src/app/pages/about/ngsw-settings/ngsw-settings.html
@@ -1,9 +1,9 @@
 <div class="mat-typography p-4">
   <h1>Service worker</h1>
 
-  <p>Service worker {{ isEnabled ? 'is' : 'is not' }} enabled</p>
+  <p>Service worker {{ isEnabled ? "is" : "is not" }} enabled</p>
 
-  <pre class="font-mono p-0 m-0" *ngIf="isEnabled">
-{{ ngswStateQry().data }}</pre
-  >
+  @if (isEnabled) {
+    <pre class="font-mono p-0 m-0">      {{ ngswStateQry().data }}</pre>
+  }
 </div>
