--- a/src/app/pages/settings/display-language/display-language.component.html
+++ b/src/app/pages/settings/display-language/display-language.component.html
@@ -1,8 +1,10 @@
 <mat-form-field appearance="outline" class="w-full">
   <mat-label>Display Language</mat-label>
   <mat-select [value]="locale" (selectionChange)="config.setLang($event.value)">
-    <mat-option *ngFor="let lang of languages" [value]="lang.value">
-      {{ lang.label }}
-    </mat-option>
+    @for (lang of languages; track lang) {
+      <mat-option [value]="lang.value">
+        {{ lang.label }}
+      </mat-option>
+    }
   </mat-select>
 </mat-form-field>
