--- a/src/app/pages/settings/theme-settings/theme-settings.html
+++ b/src/app/pages/settings/theme-settings/theme-settings.html
@@ -4,8 +4,10 @@
     [value]="themeSetting()"
     (selectionChange)="themeSetting.set($event.value)"
   >
-    <mat-option *ngFor="let option of options" [value]="option.value">
-      {{ option.label }}
-    </mat-option>
+    @for (option of options; track option) {
+      <mat-option [value]="option.value">
+        {{ option.label }}
+      </mat-option>
+    }
   </mat-select>
 </mat-form-field>
