--- a/src/app/pages/settings/youtube-settings/playlist-selector/playlist-selector.html
+++ b/src/app/pages/settings/youtube-settings/playlist-selector/playlist-selector.html
@@ -2,8 +2,10 @@
   <mat-label>Saved to playlist</mat-label>
 
   <mat-select [value]="selected">
-    <mat-option *ngFor="let item of items" [value]="item.id">
-      {{ item.snippet.localized.title }}
-    </mat-option>
+    @for (item of items; track item) {
+      <mat-option [value]="item.id">
+        {{ item.snippet.localized.title }}
+      </mat-option>
+    }
   </mat-select>
 </mat-form-field>
