--- a/src/app/pages/streams-list/streams-list.html
+++ b/src/app/pages/streams-list/streams-list.html
@@ -1,40 +1,36 @@
-<ng-container *ngIf="channels().length == 0; else list">
+@if (channels().length == 0) {
   <vts-select-vtuber-alert />
-</ng-container>
-
-<ng-template #list>
-  <div class="p-4" *ngIf="result() as result">
-    <div
-      class="flex flex-row items-center mb-4 gap-2 overflow-y-hidden overflow-x-auto"
-    >
-      <vts-vtuber-filter (selectedChange)="selectedVtuberIds.set($event)" />
-
-      <vts-date-filter
-        *ngIf="route.snapshot.data.status !== 'scheduled'"
-        (selectedChange)="selectedDateRange.set($event)"
-      />
-
-      <vts-keyword-filter
-        *ngIf="route.snapshot.data.status !== 'scheduled'"
-        (onChange)="searchKeyword.set($event)"
-      />
-
-      <div class="flex-1"></div>
-
-      <vts-refresh-button
-        [isLoading]="result.isFetching"
-        [refresh]="result.refetch"
-        [updatedAt]="result.data?.pages?.[0]?.updatedAt"
-      />
+} @else {
+  @if (result(); as result) {
+    <div class="p-4">
+      <div
+        class="flex flex-row items-center mb-4 gap-2 overflow-y-hidden overflow-x-auto"
+      >
+        <vts-vtuber-filter (selectedChange)="selectedVtuberIds.set($event)" />
+        @if (route.snapshot.data.status !== "scheduled") {
+          <vts-date-filter (selectedChange)="selectedDateRange.set($event)" />
+        }
+        @if (route.snapshot.data.status !== "scheduled") {
+          <vts-keyword-filter (onChange)="searchKeyword.set($event)" />
+        }
+        <div class="flex-1"></div>
+        <vts-refresh-button
+          [isLoading]="result.isFetching"
+          [refresh]="result.refetch"
+          [updatedAt]="result.data?.pages?.[0]?.updatedAt"
+        />
+      </div>
+      @if (!result.isError) {
+        <vts-stream-list
+          [groupBy]="true"
+          [loading]="result.isLoading"
+          [items]="result.data?.pages?.[0]?.items"
+          [hideSpinner]="!result.hasNextPage"
+          (reachedEnd)="
+            result.isFetchingNextPage ? null : result.fetchNextPage()
+          "
+        />
+      }
     </div>
-
-    <vts-stream-list
-      *ngIf="!result.isError"
-      [groupBy]="true"
-      [loading]="result.isLoading"
-      [items]="result.data?.pages?.[0]?.items"
-      [hideSpinner]="!result.hasNextPage"
-      (reachedEnd)="result.isFetchingNextPage ? null : result.fetchNextPage()"
-    />
-  </div>
-</ng-template>
+  }
+}
