--- a/src/app/pages/settings/youtube-settings/youtube-settings.html
+++ b/src/app/pages/settings/youtube-settings/youtube-settings.html
@@ -1,30 +1,29 @@
-<div *ngIf="google.initialized$ | async">
-  <div *ngIf="google.user$ | async as user; else login">
-    <div class="flex items-center space-x-2 mb-5">
-      <div class="flex-shrink-0">
-        <img
-          class="rounded-full select-none"
-          height="40"
-          width="40"
-          [ngSrc]="user.picture"
-          [attr.alt]="user.name"
-        />
+@if (google.initialized$ | async) {
+  <div>
+    @if (google.user$ | async; as user) {
+      <div>
+        <div class="flex items-center space-x-2 mb-5">
+          <div class="flex-shrink-0">
+            <img
+              class="rounded-full select-none"
+              height="40"
+              width="40"
+              [ngSrc]="user.picture"
+              [attr.alt]="user.name"
+            />
+          </div>
+          <div class="flex-1 min-w-0">
+            <div class="mat-body-2">{{ user.name }}</div>
+            <div class="mat-small mat-secondary-text">{{ user.email }}</div>
+          </div>
+          <button mat-stroked-button (click)="google.logout()">Sign Out</button>
+        </div>
+        <!-- <vts-playlist-selector /> -->
       </div>
-
-      <div class="flex-1 min-w-0">
-        <div class="mat-body-2">{{ user.name }}</div>
-        <div class="mat-small mat-secondary-text">{{ user.email }}</div>
+    } @else {
+      <div class="mb-5">
+        <google-button />
       </div>
-
-      <button mat-stroked-button (click)="google.logout()">Sign Out</button>
-    </div>
-
-    <!-- <vts-playlist-selector /> -->
+    }
   </div>
-
-  <ng-template #login>
-    <div class="mb-5">
-      <google-button />
-    </div>
-  </ng-template>
-</div>
+}
