--- a/src/app/pages/vtubers-detail/channel-overview/channel-overview.html
+++ b/src/app/pages/vtubers-detail/channel-overview/channel-overview.html
@@ -2,12 +2,13 @@
   <div class="flex flex-row items-center mb-4">
     <div class="flex-1 mat-h3 m-0">Overview</div>
 
-    <vts-menu
-      *ngIf="channels.length > 1"
-      [value]="channelIdx"
-      (change)="channelIdx = $event"
-      [options]="channelOptions"
-    />
+    @if (channels.length > 1) {
+      <vts-menu
+        [value]="channelIdx"
+        (change)="channelIdx = $event"
+        [options]="channelOptions"
+      />
+    }
 
     <vts-menu
       [value]="precision"
@@ -22,23 +23,20 @@
     [channel]="channels[channelIdx]"
   />
 
-  <ng-container *ngIf="channels[channelIdx].platform !== 'TWITCH'">
+  @if (channels[channelIdx].platform !== "TWITCH") {
     <mat-divider class="!my-2" />
-
     <vts-stats-chart
       kind="view"
       [precision]="precision"
       [channel]="channels[channelIdx]"
     />
-  </ng-container>
-
-  <ng-container *ngIf="channels[channelIdx].platform !== 'BILIBILI'">
+  }
+  @if (channels[channelIdx].platform !== "BILIBILI") {
     <mat-divider class="!my-2" />
-
     <vts-stats-chart
       kind="revenue"
       [precision]="precision"
       [channel]="channels[channelIdx]"
     />
-  </ng-container>
+  }
 </div>
