--- a/src/app/pages/vtubers-detail/vtuber-summary/vtuber-summary.html
+++ b/src/app/pages/vtubers-detail/vtuber-summary/vtuber-summary.html
@@ -12,14 +12,11 @@
     <div class="mat-h3">{{ vtuber.vtuberId | name }}</div>
 
     <div class="icons">
-      <a
-        *ngFor="let link of links"
-        class="mat-secondary-text"
-        target="_blank"
-        [attr.href]="link.href"
-      >
-        <mat-icon class="!h-5 !w-5 mr-2" [svgIcon]="link.icon" />
-      </a>
+      @for (link of links; track link) {
+        <a class="mat-secondary-text" target="_blank" [attr.href]="link.href">
+          <mat-icon class="!h-5 !w-5 mr-2" [svgIcon]="link.icon" />
+        </a>
+      }
     </div>
   </div>
 </div>
