feat: display alert for retired vtubers

--- a/src/app/pages/vtubers-detail/vtuber-summary/vtuber-summary.html
+++ b/src/app/pages/vtubers-detail/vtuber-summary/vtuber-summary.html
@@ -2,6 +2,7 @@
   <div class="mr-6">
     <img
       class="rounded-full"
+      [class.grayscale]="!!vtuber.retiredAt"
       height="80"
       width="80"
       [ngSrc]="vtuber.vtuberId | avatar"
